fixed z-index

--- a/public/css/page-orphanages.css
+++ b/public/css/page-orphanages.css
@@ -37,6 +37,7 @@
 /* button */
 
 a.create-orphanage {
+    z-index: 10;
     position: absolute;
     right: 4rem;
     bottom: 4rem;
@@ -94,4 +95,5 @@ a.create-orphanage:hover{
 
 .leaflet-container{
     font: 700 2rem/1 'Nunito', sans-serif;
+    z-index: 5;
 }
